--- a/.userrc
+++ b/.userrc
@@ -6,12 +6,16 @@ eval "$(dbus-launch --sh-syntax)"
 alias ls="exa"
 alias ltr="ls -l --sort newest"
 alias cat="bat -p"
-alias vi="vim"
+alias vi="nvim"
+alias vim="nvim"
+alias view="nvim -R"
 alias open="wslview"
 alias powershell="/mnt/c/Windows/System32/WindowsPowerShell/v1.0/powershell.exe"
 alias vihosts='powershell sudo wsl vim /mnt/c/Windows/System32/drivers/etc/hosts && powershell ipconfig /flushdns'
+alias gssh="gcloud compute ssh --project=eastern-haven-209207 --zone=asia-east1-b --tunnel-through-iap"
 
 export EDITOR="vim"
+export BROWSER=/mnt/c/Program\ Files\ \(x86\)/Microsoft/Edge/Application/msedge.exe
 export JAVA_TOOL_OPTIONS="-Dfile.encoding=UTF-8"
 export TZ="Asia/Taipei"
 export LC_ALL="en_US.UTF-8"
@@ -23,7 +27,7 @@ export CLOUDSDK_PYTHON_SITEPACKAGES=1
 export PATH="$HOME/opt/apache-jmeter-5.5/bin:$PATH"
 export PATH="$HOME/opt/scenebuilder/bin:$PATH"
 export PATH="$HOME/opt/sublime_merge:$PATH"
-export PATH="$HOME/.cargo/bin:$PATH"
+export PATH="$HOME/opt/idea-IC-232.10203.10/bin:$PATH"
 
 if type tmux > /dev/null && test -z $VSCODE_INJECTION
 then
@@ -38,7 +42,7 @@ fi
 
 restart_fcitx() {
     kill -15 $(ps aux | grep -v grep | grep fcitx | awk '{print $2}') 1>/dev/null 2>&1
-    dbus-launch fcitx5 --disable=wayland -d  --verbose '*'=0
+    fcitx5 --disable=wayland -d  --verbose '*'=0
 }
 
 if test -z "$(ps aux | grep -v grep | grep fcitx)"
